force-app/main/default/objects/Title__c/fields/Available_Stock__c.field-meta.xml
<CustomField>
    <fullName>Available_Stock__c</fullName>
    <label>Available Stock</label>
    <summaryFilterItems>
        <field>Stock__c.Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </summaryFilterItems>
    <summaryForeignKey>Stock__c.Title__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>