force-app/main/default/objects/Title__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <label>Director</label>
    <length>100</length>
    <type>Text</type>
</CustomField>