force-app/main/default/objects/Title__c/fields/Notable_Actors__c.field-meta.xml
<CustomField>
    <fullName>Notable_Actors__c</fullName>
    <label>Notable Actors</label>
    <type>TextArea</type>
</CustomField>