force-app/main/default/objects/Title__c/fields/Plot_Description__c.field-meta.xml
<CustomField>
    <fullName>Plot_Description__c</fullName>
    <label>Plot Description</label>
    <type>TextArea</type>
</CustomField>