force-app/main/default/objects/Title__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <description>Date of initial release</description>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>