force-app/main/default/objects/Title__c/fields/Runtime__c.field-meta.xml
<CustomField>
    <fullName>Runtime__c</fullName>
    <description>Runtime stored in minutes</description>
    <label>Runtime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>