force-app/main/default/objects/Title__c/fields/Total_Stock__c.field-meta.xml
<CustomField>
    <fullName>Total_Stock__c</fullName>
    <label>Total Stock</label>
    <summaryForeignKey>Stock__c.Title__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>