force-app/main/default/objects/Title__c/fields/Writer__c.field-meta.xml
<CustomField>
    <fullName>Writer__c</fullName>
    <description>Primary writer of the film</description>
    <label>Writer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>