force-app/main/default/objects/Title__c/listViews/Maintenance_Queue_Title.listView-meta.xml
<ListView>
    <fullName>Maintenance_Queue_Title</fullName>
    <filterScope>Queue</filterScope>
    <label>Maintenance Queue</label>
    <queue>Maintenance_Queue</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>